--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,7 @@ cursor: pointer;}
     letter-spacing: 0.02em;
     color: #2e2f42;
 }
+.heder-act-s:hover.heder-act-s:focus{color: #404bbf;}
 
 
 .heder-act:hover.heder-act:focus{color: #404bbf;
@@ -102,8 +103,15 @@ text-transform: uppercase;
 color:#4d5ae5;
 }
 .web-studio:hover.web-studio:focus{color: #404bbf;
-
-
+}
+.web-studio-log {
+        font-family: "Raleway", sans-serif;
+        font-weight: 700;
+        font-size: 18px;
+        line-height: 1.17;
+        letter-spacing: 0.03em;
+        text-transform: uppercase;
+        color: #4d5ae5;
 }
 /*------------ main----------- */
 .list-title1 {
@@ -170,8 +178,9 @@ font-weight: 400;
 }
 
 
-.stu-t{color: #f4f4fd;
-    font-family: raleway, sans-serif;
+.sp-footer{color: #f4f4fd;
+    font-family: "Raleway",
+            sans-serif;
     font-weight: 700;
     font-size: 18px;
     line-height: 1.17;
