--- a/css/style.css
+++ b/css/style.css
@@ -186,5 +186,8 @@ font-weight: 400;
     line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
+    color: #f4f4fd;
 }
+
+
 
