--- a/css/style.css
+++ b/css/style.css
@@ -118,7 +118,7 @@ color:#4d5ae5;
         color: #4d5ae5;
 }
 /*------------ main----------- */
-.list-title-a {
+.list-title-aq{
     font-weight: 700;
     font-size: 36px;
     line-height: 1.11;
