--- a/css/style.css
+++ b/css/style.css
@@ -91,8 +91,7 @@ cursor: pointer;}
     letter-spacing: 0.02em;
     color: #434455;
 }
-
-.contact:hover.contact:focus{color: #404bbf;
+.contact:hover,.contact:focus{color: #404bbf;
 }
 
 ul{
