--- a/css/style.css
+++ b/css/style.css
@@ -82,7 +82,7 @@ cursor: pointer;}
     color: #404bbf;
 }
 
-.ad-nav{font-style: normal
+.adnav{font-style: normal
 }
 
 .contact{font-weight: 400;
