--- a/css/style.css
+++ b/css/style.css
@@ -82,7 +82,7 @@ cursor: pointer;}
     color: #404bbf;
 }
 
-.adnav{font-style: normal
+.ad-nav{font-style: normal;
 }
 
 .contact-mails{font-weight: 400;
