--- a/css/style.css
+++ b/css/style.css
@@ -85,20 +85,20 @@ cursor: pointer;}
 .ad-nav{font-style: normal;
 }
 
-.contact-mails{font-weight: 400;
+.contact{font-weight: 400;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
 }
-.contact-mails:hover,.contact-mails{color: #404bbf;
+.contact:hover,.contact{color: #404bbf;
 }
-.contact-tel{font-weight: 400;
+.contact{font-weight: 400;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;}
-.contact-tel:hover,.contact-tel:focus{color: #404bbf;}
+.contact:hover,.contact:focus{color: #404bbf;}
 
 
 
