--- a/css/style.css
+++ b/css/style.css
@@ -83,7 +83,10 @@ cursor: pointer;}
 }
 
 .ad-nav{font-style: normal;
+    color: #434455;
 }
+
+.ad-nav:hover,.ad-nav:focus{color:#404bbf ;}
 
 .contact{font-weight: 400;
     font-size: 16px;
