--- a/css/style.css
+++ b/css/style.css
@@ -166,7 +166,7 @@ font-weight: 400;
     color: #F4F4FD;
 }
 
-    .stu{
+    .studio-sp{
     font-family:raleway,sans-serif;
     font-weight: 700;
         font-size: 18px;
