--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,7 @@ cursor: pointer;}
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    color: #2e2f42;
+    color: #434455
 }
 
 .heder-act:hover.heder-act:focus {
