--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ cursor: pointer;}
     background-color: #404BBF;
 }
 
-.heder-act {
+.heder-act {color: #2e2f42;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
@@ -58,7 +58,7 @@ cursor: pointer;}
 }
 
 .heder-act:hover.heder-act:focus {
-    color: #404bbf;
+    color:   #404bbf;
 }
 
 
