--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ cursor: pointer;}
     background-color: #404BBF;
 }
 
-.heder-act {
+.heder-ac {
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
