--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,7 @@ cursor: pointer;}
 }
 .contact:hover,.contact{color: #404bbf;
 }
-.contact-li{color: #434455;}
+.contact-tel{color: #434455;}
 
 
 ul{
