--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,12 @@ cursor: pointer;}
     background-color: #404BBF;
 }
 
+.hewn{font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #2e2f42;}
+
 .hed {
     font-weight: 500;
     font-size: 16px;
