--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,7 @@ cursor: pointer;}
     color: #2e2f42;
 }
 
-.hewn:hover.hewn:focus {color: #404bbf;
+.hewn:hover,.hewn:focus {color: #404bbf;
 
 }
 
@@ -72,7 +72,10 @@ cursor: pointer;}
     color: #434455;
 }
 
-.ad-nav:hover,.ad-nav:focus{color:#404bbf ;}
+.ad-nav:hover{
+        color: #404bbf;
+    }
+.ad-nav:focus{color:#404bbf ;}
 
 .contact{ 
     font-weight: 400;
