--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,23 @@ body{font-family:"Roboto",sans-serif;
         background-color:#ffffff;
 
 }
+h1,h2,h3,h4,h5,h6,p,ul{
+margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
+}
+
+* {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 0;}
+
+
+
 p{font-style: normal}
 .col-title{color:#4D5AE5;
 font-family: raleway,sans-serif;
@@ -18,7 +35,14 @@ font-weight: 700;
 }
 
 
-.logo-title{background-color: #2E2F42;}
+.logo-title{background-color: #2E2F42;
+width: 1440px;
+    height: 600px;
+display: flex;
+justify-self: center;
+align-items: center;
+
+}
 
 
 
@@ -26,14 +50,18 @@ font-weight: 700;
 
 }
 
-.list-title-b {
-font-weight: 700;
+.list-title-b {font-weight: 700;
     font-size: 56px;
     line-height: 1.07;
     letter-spacing: 0.02em;
     color: #fff;
-    text-align: center
-
+    text-align: center;
+    padding-right: 472px;
+    padding-left: 472px;
+    padding-top: 188px;
+    padding-bottom: 292px;
+    margin: 0 auto;
+    padding: 0 auto;
 }
 /* ---------header--------- */
 .button-a{background-color: #4D5AE5;
@@ -43,17 +71,27 @@ font-weight: 700;
     letter-spacing: 0.04em;
     color: #ffffff;
     background-color: #4D5AE5;
-cursor: pointer;}
-
+cursor: pointer;
+border-radius: 4px;
+    padding: 16px 32px;
+    width: 169px;
+    height: 56px;
+}
 .button-a:hover,.button-a:focus{color: #ffffff;
     background-color: #404BBF;
 }
-
+.all{
+    display: flex;
+        align-items: center;
+        padding: 832px, 24px, 347px, 24px;
+}
 .hewn{font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    color: #2e2f42;}
+    color: #2e2f42;
+
+}
 
 .hed {
     font-weight: 500;
@@ -61,6 +99,7 @@ cursor: pointer;}
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #2e2f42;
+    padding-right: 40px;
 }
 
 
@@ -69,6 +108,8 @@ cursor: pointer;}
 
 .ad-nav{font-style: normal;
     color: #434455;
+    padding-right: 40px;
+align-items: center;
 }
 
 .ad-nav:hover{
@@ -82,6 +123,7 @@ cursor: pointer;}
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
+    padding-right: 40px;
 }
 .contact:hover,.contact:focus{color: #404bbf;
 }
@@ -92,6 +134,15 @@ a{text-decoration: none;}
 ul{
 list-style: none; 
 }
+
+.header-box{ 
+        border-bottom: 1px solid #e7e9fc;
+        width: 1440px;
+        height: 72px;
+        padding: auto;
+display: inline-block;
+}
+
 .web-studio{font-family: "Raleway", sans-serif;
 font-weight: 700;
 font-size: 18px;
@@ -109,8 +160,8 @@ color:#4d5ae5;
         line-height: 1.17;
         letter-spacing: 0.03em;
         text-transform: uppercase;
-        color: #4d5ae5;
-}
+        color: #4d5ae5;}
+
 /*------------ main----------- */
 .list-title-aq{
     font-weight: 700;
